--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "createjs": "^1.0.1",
     "easeljs": "^1.0.2",
+    "node.js": "0.0.1-security",
     "preloadjs": "^1.0.1",
     "soundjs": "^1.0.1",
     "tweenjs": "^1.0.2"
